<resources>
    <string name="app_name">Automobilių nuoma</string>

    <string name="login_username">Prisijungimo vardas</string>
    <string name="login_password">Slaptažodis</string>
    <string name="login_login">Prisijungti</string>
    <string name="login_register">Registruotis</string>
    <string name="login_remember_me">Prisiminti mane</string>
    <string name="login_error">Blogai įvestas prisijungimo vardas arba slaptažodis</string>
    <string name="register_notice">Norėdami užsiregistruoti mūsų sistemoje, užpildykite žemiau pateiktus langelius ir spauskite „Registruotis“.</string>
    <string name="register_email">El. paštas</string>
    <string name="register_submit">Registruotis</string>
    <string name="register_successful">Jūs sėkmingai užsiregistravote, dabar galite prisijungti.</string>
    <string name="register_username_error">Blogai įvestas prisijungimo vardas!</string>
    <string name="register_email_error">Blogai įvestas el. pašto adresas!</string>
    <string name="register_password_error">Blogai įvestas slaptažodis!</string>
    <string name="search_description">Jūs sėkmingai prisijungėte prie sistemos.</string>
    <string name="search_submit">Ieškoti</string>
    <string name="search_naujas_langas">Pereiti į kitą langą</string>
    <string name="add_entry_description">Norėdami įtraukti duomenis į duomenų bazę, užpildykite formą ir spauskite mygtuką „Pridėti įrašą“.</string>
    <string name="add_entry_vardas">Vardas</string>
    <string name="add_entry_pavarde">Pavardė</string>
    <string name="add_entry_asmenskodas">Asmens kodas</string>
    <string name="add_entry_submit">Pridėti įrašą</string>
    <string name="add_entry_error">Užpildykite visus laukelius!</string>

    <string-array name="tipas">
        <item>Hečbekas</item>
        <item>Sedanas</item>
        <item>Universalas</item>
    </string-array>

</resources>
