<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/colorWhite"
        android:paddingBottom="22dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_notice"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:paddingBottom="22dp"/>

    <EditText
        android:id="@+id/register_username"
        android:hint="@string/login_username"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="10dp"
        android:background="@color/colorEdit"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorWhite"
        android:padding="10dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/register_password"
        android:hint="@string/login_password"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorEdit"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorWhite"
        android:padding="10dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_email"
        android:hint="@string/register_email"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        android:background="@color/colorEdit"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorWhite"
        android:padding="10dp"
        android:layout_height="wrap_content" />

        <Button
            android:id="@+id/register_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_submit"
            android:layout_marginRight="5dp"
            android:background="@color/colorButton"
            android:textColor="@color/colorWhite" />

</LinearLayout>
