<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"/>

    <TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textAlignment="center"
    android:textAllCaps="true"
    android:textStyle="bold"
    android:textSize="18dp"
    android:textColor="@color/colorWhite"
    android:paddingBottom="22dp"/>

    <EditText
        android:id="@+id/login_username"
        android:hint="@string/login_username"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="10dp"
        android:background="@color/colorEdit"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorWhite"
        android:padding="10dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_password"
        android:hint="@string/login_password"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorEdit"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorWhite"
        android:padding="10dp"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="20dp"
        android:text="@string/login_remember_me"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/login_login"
            android:layout_marginRight="5dp"
            android:background="@color/colorButton"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@color/colorButton"
            android:text="@string/login_register"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</LinearLayout>
